@@ -21,7 +21,6 @@ src/DisplayTabs.py
 src/Errors.py
 src/Exporter.py
 src/FontScale.py
-src/GenericFilter.py
 src/GrampsCfg.py
 src/GrampsDisplay.py
 src/GrampsLocale.py
@@ -290,6 +289,72 @@ src/RelLib/_SourceMediaType.py
 src/RelLib/_MarkerType.py
 src/RelLib/_EventRoleType.py
 src/RelLib/_EventType.py
+src/Filters/_FilterComboBox.py
+src/Filters/_FilterList.py
+src/Filters/_FilterMenu.py
+src/Filters/_FilterParser.py
+src/Filters/_FilterStore.py
+src/Filters/_FilterWidget.py
+src/Filters/_GenericFilter.py
+src/Filters/_ParamFilter.py
+src/Filters/__init__.py
+src/Filters/Rules/_Disconnected.py
+src/Filters/Rules/_Everyone.py
+src/Filters/Rules/_FamilyWithIncompleteEvent.py
+src/Filters/Rules/_HasAttribute.py
+src/Filters/Rules/_HasBirth.py
+src/Filters/Rules/_HasCommonAncestorWith.py
+src/Filters/Rules/_HasCommonAncestorWithFilterMatch.py
+src/Filters/Rules/_HasCompleteRecord.py
+src/Filters/Rules/_HasDeath.py
+src/Filters/Rules/_HasEvent.py
+src/Filters/Rules/_HasFamilyAttribute.py
+src/Filters/Rules/_HasFamilyEvent.py
+src/Filters/Rules/_HasIdOf.py
+src/Filters/Rules/_HasNameOf.py
+src/Filters/Rules/_HasNote.py
+src/Filters/Rules/_HasNoteMatchingSubstringOf.py
+src/Filters/Rules/_HasRelationship.py
+src/Filters/Rules/_HasSourceOf.py
+src/Filters/Rules/_HasTextMatchingRegexpOf.py
+src/Filters/Rules/_HasTextMatchingSubstringOf.py
+src/Filters/Rules/_HasUnknownGender.py
+src/Filters/Rules/_HaveAltFamilies.py
+src/Filters/Rules/_HaveChildren.py
+src/Filters/Rules/_HavePhotos.py
+src/Filters/Rules/_IncompleteNames.py
+src/Filters/Rules/_IsAncestorOf.py
+src/Filters/Rules/_IsAncestorOfFilterMatch.py
+src/Filters/Rules/_IsBookmarked.py
+src/Filters/Rules/_IsChildOfFilterMatch.py
+src/Filters/Rules/_IsDefaultPerson.py
+src/Filters/Rules/_IsDescendantFamilyOf.py
+src/Filters/Rules/_IsDescendantOf.py
+src/Filters/Rules/_IsDescendantOfFilterMatch.py
+src/Filters/Rules/_IsFemale.py
+src/Filters/Rules/_IsLessThanNthGenerationAncestorOf.py
+src/Filters/Rules/_IsLessThanNthGenerationAncestorOfBookmarked.py
+src/Filters/Rules/_IsLessThanNthGenerationAncestorOfDefaultPerson.py
+src/Filters/Rules/_IsLessThanNthGenerationDescendantOf.py
+src/Filters/Rules/_IsMale.py
+src/Filters/Rules/_IsMoreThanNthGenerationAncestorOf.py
+src/Filters/Rules/_IsMoreThanNthGenerationDescendantOf.py
+src/Filters/Rules/_IsParentOfFilterMatch.py
+src/Filters/Rules/_IsSiblingOfFilterMatch.py
+src/Filters/Rules/_IsSpouseOfFilterMatch.py
+src/Filters/Rules/_IsWitness.py
+src/Filters/Rules/_MatchesFilter.py
+src/Filters/Rules/_MultipleMarriages.py
+src/Filters/Rules/_NeverMarried.py
+src/Filters/Rules/_NoBirthdate.py
+src/Filters/Rules/_PeoplePrivate.py
+src/Filters/Rules/_PersonWithIncompleteEvent.py
+src/Filters/Rules/_ProbablyAlive.py
+src/Filters/Rules/_RelationshipPathBetween.py
+src/Filters/Rules/_Rule.py
+src/Filters/Rules/_RuleUtils.py
+src/Filters/Rules/_SearchName.py
+src/Filters/Rules/__init__.py
 #
 #	Glade files
 #
