@@ -1,3 +1,6 @@
+2006-05-02  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: Add new files.
+
 2006-05-01  Alex Roitman  <shura@gramps-project.org>
 	* POTFILES.in: Add new file.
 
